--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Start on Heroku: Python",
+  "name": "Knowmona",
   "description": "A barebones Python app, which can easily be deployed to Heroku.",
   "repository": "https://github.com/heroku/python-getting-started",
-  "website": "https://devcenter.heroku.com/articles/getting-started-with-python",
+  "website": "https://knowmona.com",
   "keywords": ["python", "django"],
   "env": {
     "DJANGO_SECRET_KEY": {
