--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-.venv
+# Python files
+__pycache__/
+.venv/
+venv/
+
+# Django files
+staticfiles/
+db.sqlite3
+
+# macOS files
+.DS_Store
+
+inference_test.py
